# solana-interface-permissioned-tfer

./: Anchor.toml  Cargo.toml  package.json
accounts/: permission_token_wrapper-idl.json  twice_permissioned-idl.json
interface/: Cargo.toml
interface/src/: lib.rs
programs/caller/: Cargo.toml
programs/caller/src/: lib.rs
programs/permissioned-token-wrapper/: Cargo.toml
programs/permissioned-token-wrapper/src/: lib.rs
programs/twice-permissioned/: Cargo.toml
programs/twice-permissioned/src/: lib.rs
programs/twice-wrapper/: Cargo.toml
programs/twice-wrapper/src/: lib.rs
tests/: caller.ts  permissioned-token-wrapper.ts  twice-wrapper.ts
